# nesc-toolchain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nesc-asm/: Cargo.toml
crates/nesc-asm/src/: lib.rs
crates/nesc-cli/: Cargo.toml
crates/nesc-cli/src/: asset.rs  lib.rs  main.rs  nesc_verification.rs
crates/nesc-cli/tests/: cli.rs
crates/nesc-codegen-6502/: Cargo.toml
crates/nesc-codegen-6502/src/: abi.rs  allocation.rs  cost.rs  layout.rs  lib.rs  stack.rs
crates/nesc-codegen-6502/tests/: flag_liveness_smoke.rs
crates/nesc-compiler/: Cargo.toml
crates/nesc-compiler/src/: lib.rs
crates/nesc-debug/: Cargo.toml
crates/nesc-debug/src/: lib.rs  session.rs
crates/nesc-decompile-runtime/: Cargo.toml
crates/nesc-decompile-runtime/src/: lib.rs
crates/nesc-decompiler/: Cargo.toml
crates/nesc-decompiler/src/: lib.rs  nesc_emitter.rs  recovery_analysis.rs  rust_emitter.rs  structuring.rs  value_analysis.rs
crates/nesc-diagnostics/: Cargo.toml
crates/nesc-diagnostics/src/: lib.rs
crates/nesc-disasm/: Cargo.toml
crates/nesc-disasm/src/: decoder.rs  lib.rs
crates/nesc-emulator/: Cargo.toml
crates/nesc-emulator/src/: apu.rs  audio.rs  cpu.rs  image.rs  lib.rs  machine.rs  palette.rs
crates/nesc-frontend/: Cargo.toml
crates/nesc-frontend/src/: ast.rs  lexer.rs  lib.rs  macro_expansion.rs  parser.rs  preprocessor.rs  sema.rs  source.rs  token.rs
crates/nesc-hir/: Cargo.toml
crates/nesc-hir/src/: lib.rs
crates/nesc-linker/: Cargo.toml
crates/nesc-linker/src/: lib.rs
crates/nesc-mir/: Cargo.toml
crates/nesc-mir/src/: lib.rs
crates/nesc-object/: Cargo.toml
crates/nesc-object/src/: lib.rs
crates/nesc-opt/: Cargo.toml
crates/nesc-opt/src/: control_flow.rs  lib.rs
crates/nesc-project/: Cargo.toml
crates/nesc-project/src/: lib.rs  manifest.rs  scaffold.rs
crates/nesc-project/tests/: manifest.rs
crates/nesc-rom/: Cargo.toml
crates/nesc-rom/src/: lib.rs
crates/nesc-runtime/: Cargo.toml
crates/nesc-runtime/src/: arithmetic.rs  lib.rs  test_protocol.rs
examples/t70/: NesC.toml
examples/t70/assets/: tiles.chr
examples/t70/src/: main.c
sdk/include/: audio.h  collision.h  controller.h  input.h  mapper.h  metasprite.h  nametable.h  nes.h  ppu.h  random.h  sprite.h  update.h
