[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.6.2", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
tempfile = "3.27.0"
toml = "1.1.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
