[package]
name = "nesc-asm"
description = "6502 assembler and assembly interoperability for NesC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-disasm = { path = "../nesc-disasm" }

[lints]
workspace = true
