[package]
name = "nesc-cli"
description = "Command-line interface for nesc-toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
nesc-compiler = { path = "../nesc-compiler" }
nesc-diagnostics = { path = "../nesc-diagnostics" }
nesc-project = { path = "../nesc-project" }
nesc-rom = { path = "../nesc-rom" }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "nesc"
path = "src/main.rs"

[lints]
workspace = true
