[package]
name = "nesc-cli"
description = "Command-line interface for nesc-toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
nesc-asm = { path = "../nesc-asm" }
nesc-compiler = { path = "../nesc-compiler" }
nesc-decompiler = { path = "../nesc-decompiler" }
nesc-debug = { path = "../nesc-debug" }
nesc-disasm = { path = "../nesc-disasm" }
nesc-diagnostics = { path = "../nesc-diagnostics" }
nesc-emulator = { path = "../nesc-emulator" }
nesc-linker = { path = "../nesc-linker" }
nesc-project = { path = "../nesc-project" }
nesc-rom = { path = "../nesc-rom" }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "nesc"
path = "src/main.rs"

[lints]
workspace = true
