[package]
name = "nesc-codegen-6502"
description = "Ricoh 2A03 and 2A07 machine-code generation for NesC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-mir = { path = "../nesc-mir" }
nesc-object = { path = "../nesc-object" }

[lints]
workspace = true
