[package]
name = "nesc-compiler"
description = "Top-level orchestration for the NesC compilation pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-asm = { path = "../nesc-asm" }
nesc-codegen-6502 = { path = "../nesc-codegen-6502" }
nesc-diagnostics = { path = "../nesc-diagnostics" }
nesc-frontend = { path = "../nesc-frontend" }
nesc-hir = { path = "../nesc-hir" }
nesc-mir = { path = "../nesc-mir" }
nesc-opt = { path = "../nesc-opt" }
nesc-project = { path = "../nesc-project" }
nesc-linker = { path = "../nesc-linker" }
nesc-rom = { path = "../nesc-rom" }
nesc-runtime = { path = "../nesc-runtime" }

[dev-dependencies]
nesc-emulator = { path = "../nesc-emulator" }
tempfile.workspace = true

[lints]
workspace = true
