[package]
name = "nesc-debug"
description = "Source-level debugger support for NesC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-disasm = { path = "../nesc-disasm" }
nesc-emulator = { path = "../nesc-emulator" }
nesc-rom = { path = "../nesc-rom" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
