[package]
name = "nesc-decompile-runtime"
description = "Host-side runtime for decompiled stable Rust output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-disasm = { path = "../nesc-disasm" }

[lints]
workspace = true
