[package]
name = "nesc-decompiler"
description = "6502 semantic lifting and NesC or Rust decompilation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-codegen-6502 = { path = "../nesc-codegen-6502" }
nesc-disasm = { path = "../nesc-disasm" }
nesc-rom = { path = "../nesc-rom" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
