[package]
name = "nesc-emulator"
description = "Deterministic NES emulator and compiler test runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-disasm = { path = "../nesc-disasm" }
nesc-rom = { path = "../nesc-rom" }

[lints]
workspace = true
