[package]
name = "nesc-frontend"
description = "Preprocessing, parsing, and semantic analysis for NesC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-diagnostics = { path = "../nesc-diagnostics" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
