[package]
name = "nesc-hir"
description = "Typed high-level intermediate representation for NesC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-frontend = { path = "../nesc-frontend" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
