[package]
name = "nesc-linker"
description = "NES-aware linker for NOBJ inputs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-object = { path = "../nesc-object" }
nesc-rom = { path = "../nesc-rom" }

[dev-dependencies]
nesc-runtime = { path = "../nesc-runtime" }

[lints]
workspace = true
