[package]
name = "nesc-mir"
description = "Control-flow intermediate representation and verifier for NesC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nesc-hir = { path = "../nesc-hir" }

[dev-dependencies]
nesc-frontend = { path = "../nesc-frontend" }
tempfile.workspace = true

[lints]
workspace = true
